--- a/index.html
+++ b/index.html
@@ -32,10 +32,16 @@
         <div class="header-second">
             <div class="container">
                 <div class="header-main">
+                    <div class="fake-logo">
+                        <a href="##" class="header-link icon-bx"></a>
+                        <a href="##" class="header-link icon-sr"></a>
+                    </div>
                     <div class="small-logo">
                         <p class="small-logo font-post-no-bills-jaffna w700">PORTEN</p>
                     </div>
                     <div class="header-burger">
+                        <!-- <a href="##" class="header-link icon-bx"></a>
+                        <a href="##" class="header-link icon-sr"></a> -->
                         <span></span>
                     </div>
                     <nav class="header-menu">
